--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <a href="https://github.com/yjeong0114/Exchange-currency" class="project" target="blank" data-type="front-end">
                 <img src="imgs/projects/Exchange-currency.png" alt="" class="project__img">
                 <div class="project__description">
-                    <h3>Exchange Currency App</h3>
+                    <h3>Exchange Rate App</h3>
                     <span>HTML, CSS, JavaScript</span>
                 </div>
             </a>
