--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
     <section id="about" class="section section__container" >
       <div class="section__container">
         <h1>About me</h1>
-        <p class="about__content">I am a mother of two amazing daughters living in Chicago. I was a computer science major.<br/>
-             I worked for Hanwha systems for 3 years right after I graduated from Sookmyung Women's university in Seoul, Korea. I developed and operated the customer system using HTML, SQL, Visual Basic and .NET there. <br/>
-            I have self-taught more languages to work as a front-end developer in the States.<br/> I'm passionate about learning and developing new skills and languages.</p>
+        <p class="about__content">I am a mother of two amazing daughters living in Chicago. I have a Bachelor's degree in Computer Science.<br/>
+             I have 3 years of experience as a software developer at one of the largest Korean companies. I developed and maintained <br/>customer systems using VB.Net, SQL, and HTML there. 
+             I recentlry attended a coding bootcamp software engineer program <br/> to refresh my skills and learn more languages such as Python, JavaScript and so on. <br> 
+             I'm always passionate about learning and developing new skills and programming languages.</p>
         <div class="about__majors">
             <div class="major">
                 <div class="major__icon"><i class="fab fa-html5"></i></div>
