--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1>About me</h1>
         <p class="about__content">I am a mother of two amazing daughters living in Chicago. I have a Bachelor's degree in Computer Science.<br/>
              I have 3 years of experience as a software developer at one of the largest Korean companies. I developed and maintained <br/>customer systems using VB.Net, SQL, and HTML there. 
-             I recentlry attended a coding bootcamp software engineer program <br/> to refresh my skills and learn more languages such as Python, JavaScript and so on. <br> 
+             I recently attended a coding bootcamp software engineer program <br/> to refresh my skills and learn more languages such as Python, JavaScript and so on. <br> 
              I'm always passionate about learning and developing new skills and programming languages.</p>
         <div class="about__majors">
             <div class="major">
@@ -185,7 +185,7 @@
            <button class="category__btn" data-filter="full-stack">Full-stack<span class="category__count">1</span></button>
        </div>
        <div class="work__projects">
-            <a href="https://github.com/yjeong0114/theater_project" class="project" target="blank" data-type="front-end">
+            <a href="https://yjeong0114.github.io/theater_project/" class="project" target="blank" data-type="front-end">
             <img src="imgs/projects/Theater Website.png" alt="" class="project__img">
             <div class="project__description">
                 <h3>Featured Shows</h3>
@@ -199,7 +199,7 @@
                 <span>HTML5, CSS3, Bootstrap</span>
             </div>
             </a>
-            <a href="https://github.com/yjeong0114/Exchange-currency" class="project" target="blank" data-type="front-end">
+            <a href="https://yjeong0114.github.io/Exchange-currency/" class="project" target="blank" data-type="front-end">
                 <img src="imgs/projects/Exchange-currency.png" alt="" class="project__img">
                 <div class="project__description">
                     <h3>Exchange Rate App</h3>
@@ -231,7 +231,7 @@
            <a href="https://github.com/yjeong0114" target="_blank">
                 <i class="fab fa-github"></i>
            </a>
-           <a href="https://www.linkedin.com/in/yoon-hwa-jeong-47a80b210/" target="_blank">
+           <a href="https://www.linkedin.com/in/yoon-hwa-jeong" target="_blank">
                 <i class="fab fa-linkedin"></i>
            </a>
        </div>
