--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="major">
                 <div class="major__icon"><i class="fab fa-html5"></i></div>
                 <h2 class="major__title">Front-end</h2>
-                <p class="major__description">HTML, CSS, JavaScript, TypeScript,<br/>React, Web APIs, PostCss</p>
+                <p class="major__description">CSS3, HTML5, JavaScript <br/> TypeScript, Bootstrap<br/>React, Web APIs</p>
             </div>
             <div class="major">
                 <div class="major__icon"><i class="fas fa-server"></i></div>
@@ -69,9 +69,10 @@
             <div class="major">
                 <div class="major__icon"><i class="fas fa-certificate"></i></div>
                 <h2 class="major__title">Certificate</h2>
-                <p class="major__description">Engineer Information Processing <br/>
-                                            Microsoft Office Specialist certificate <br/>
-                                            Passed FAR and Audit sections in CPA exams</p>
+                <p class="major__description">Data processing report <br/>
+                                            Microsoft Office Specialist <br/>
+                                            Software Engineer-Coding Temple
+                                            </p>
             </div>
         </div>
         <div class="about__job">
@@ -156,7 +157,7 @@
                     <h3 class="skillset__title">Tools</h3>
                     <ul class="tools__list">
                         <li><span>Visual Studio Code</span></li>
-                        <li><span>Oracle</span></li>
+                        <li><span>Jupiter Notebook</span></li>
                         <li><span>GitHub</span></li>
                     </ul>
                </div>
@@ -165,8 +166,6 @@
                     <ul class="etc__list">
                         <li><span>Financial Accounting CPA exam passed</span></li>
                         <li><span>Audit CPA exam passed</span></li>
-                        <li><span>Engineer Information Processing exam passed</span></li>
-                        <li><span>Earned Microsoft Office Specialist certificate</span></li>
                     </ul>
                </div>
            </div>
