--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="major">
                 <div class="major__icon"><i class="fas fa-certificate"></i></div>
                 <h2 class="major__title">Certificate</h2>
-                <p class="major__description">Data processing report <br/>
+                <p class="major__description">Engineer Information Processing <br/>
                                             Microsoft Office Specialist <br/>
                                             Software Engineer-Coding Temple
                                             </p>
@@ -184,14 +184,14 @@
            <button class="category__btn" data-filter="full-stack">Full-stack<span class="category__count">1</span></button>
        </div>
        <div class="work__projects">
-            <a href="https://yjeong0114.github.io/theater_project/" class="project" target="blank" data-type="front-end">
-            <img src="imgs/projects/Theater Website.png" alt="" class="project__img">
+            <a href="https://yjeong0114.github.io/flexbox-music/" class="project" target="blank" data-type="front-end">
+            <img src="imgs/projects/music-flexbox.png" alt="" class="project__img">
             <div class="project__description">
                 <h3>Featured Shows</h3>
                 <span>HTML5, CSS3</span>
             </div>
             </a>
-            <a href="https://github.com/yjeong0114/lacal_gym" class="project" target="blank" data-type="front-end">
+            <a href="https://yjeong0114.github.io/lacal_gym/" class="project" target="blank" data-type="front-end">
             <img src="imgs/projects/local_gym.png" alt="" class="project__img">
             <div class="project__description">
                 <h3>Local Gym Website</h3>
